[package]
name = "rotate-enum"
version = "0.1.1"
authors = ["msakuta <masahiro.sakuta@gmail.com>"]
edition = "2018"
description = "A simple macro that implements prev() and next() methods to an enum"
license = "MIT"
repository = "https://github.com/msakuta/rotate-enum"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0" }
quote = "1.0"
